[package]
name = "deno-require"
version = "0.1.0"
authors = ["胡文彬 <huwenbin.tyreal@bytedance.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["swc_v1"]
swc_v1 = []
swc_v2 = []

plugin = [
    "swc/plugin",
    "swc_plugin_runner/memory_cache",
    "swc_plugin_runner/plugin_transform_schema_v1",
    "wasmer",
    "wasmer-wasi",
    "wasmer/js-default",
    "wasmer-wasi/js-default",
    "js-sys"
]

[dependencies]
anyhow = "1.0.42"
js-sys = { version = "0.3.56", optional = true }
once_cell = "1.10.0"
parking_lot_core = "0.9.1"
path-clean = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc = "0.217.2"
swc_common = { version = "0.27.12", features = ["perf"] }
swc_ecma_lints = { version = "0.59.0", features = [
    "non_critical_lints",
] }
swc_ecmascript = "0.192.0"
swc_plugin_runner = { version = "0.72.0", default-features = false, optional = true }
console_error_panic_hook = "0.1.7"
tracing = { version = "0.1.32", features = ["release_max_level_off"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasmer = { version = "2.3.0", optional = true, default-features = false }
wasmer-wasi = { version = "2.3.0", optional = true, default-features = false }
wasm-bindgen-futures = "0.4.32"
web-sys = { version = "0.3.59", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window"
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
